tests/Fixtures/Torture/Bad/return_empty.g
// EXPECT G010
kernel { entry func Main() { } int func f() { return; } }
